# mlir-standalone-template

./: CMakeLists.txt
test/: CMakeLists.txt
test/Unit/: lit.cfg.py
unittests/: CMakeLists.txt
unittests/Example/: CMakeLists.txt  Example.cpp
